// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "elevation": 4,
          "paddingHorizontal": 15,
          "paddingVertical": 20,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        },
        Array [
          undefined,
          false,
        ],
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#171717",
          "fontSize": 28,
        }
      }
    >
      This is the card description
    </Text>
  </View>
</View>
`;

exports[`renders selected correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 10,
          "elevation": 4,
          "paddingHorizontal": 15,
          "paddingVertical": 20,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        },
        Array [
          undefined,
          Object {
            "borderColor": "#4D8AF0",
            "borderWidth": 2.5,
          },
        ],
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#171717",
          "fontSize": 28,
        }
      }
    >
      This is the card description
    </Text>
  </View>
</View>
`;
